# ff-agent

./: .env.example  .gitignore  intro.md  main.py  pyproject.toml  requirements.txt
agent/: __init__.py  assign.py  clipboard.py  commands.py  config.py  core.py  discuss.py  errors.py  executor.py  graph_assign.py  graph_chat.py  graph_discuss.py  graph_state.py  graph_tools.py  history.py  lc_llm.py  llm.py  memory.py  messages_util.py  model_settings.py  planner.py  roles.py  session_hub.py  skills.py  tool_display.py  tools.py  tui.py  workspace.py
agent/channels/: __init__.py  base.py  gateway.py  registry.py  router.py  sessions.py  utils.py
agent/channels/wechat/: __init__.py  credentials.py  ilink.py  ilink_cdn.py  ilink_client.py  ilink_media.py  official.py
agent/web/: __init__.py  server.py
agent/web/static/: app.js  index.html  style.css
roles/coder/: ROLE.md
roles/default/: ROLE.md
roles/writer/: ROLE.md
scripts/: capture-screen.sh  portal-screenshot.py
skills-extra/extra/: SKILL.md
skills/example/: SKILL.md
skills/plan-and-execute/: SKILL.md
skills/role-manager/: SKILL.md
skills/screenshot/: SKILL.md
skills/workspace-manager/: SKILL.md
tests/: fakes.py  test_assign.py  test_assign_graph.py  test_chat_events_golden.py  test_discuss.py  test_discuss_graph.py  test_history.py  test_lc_llm.py  test_messages_util.py  test_model_settings.py  test_plan_persistence.py
