[project]
name = "ff-agent"
version = "0.1.0"
description = "Simple agent with skills and long-term memory"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "textual>=0.80.0",
    "wechatpy>=1.8.18",
    "qrcode>=7.4.2",
    "cryptography>=42.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[project.scripts]
ff-agent = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.hatch.build.targets.wheel.force-include]
"agent/web/static" = "agent/web/static"
